# traffic-accident-impact

./: .gitignore  .pdm-python  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/LightGBM/frac-0.1/: LightGBM-frac-0.1.pkl  feature_importance.xlsx
models/LightGBM/frac-0.3/: feature_importance.xlsx
models/LightGBM/frac-0.5/: LightGBM-frac-0.5.pkl
models/LightGBM/frac-0.8/: feature_importance.xlsx
models/Linear/frac-0.0001/: Linear-frac-0.0001.pkl
models/Linear/frac-0.1/: feature_importance.xlsx
models/Linear/frac-0.3/: feature_importance.xlsx
models/Linear/frac-0.5/: Linear-frac-0.5.pkl  feature_importance.xlsx
models/Linear/frac-0.8/: feature_importance.xlsx
models/Linear/frac-1.0/: Linear-frac-1.0.pkl  feature_importance.xlsx
models/XGBoost/frac-0.1/: feature_importance.xlsx
models/XGBoost/frac-0.3/: feature_importance.xlsx
models/XGBoost/frac-0.5/: feature_importance.xlsx
models/XGBoost/frac-0.8/: feature_importance.xlsx
notebooks/: project.ipynb  report.ipynb
src/notebooks/: EDA-1.ipynb  EDA-2.ipynb  project.ipynb  project_2.ipynb  report.ipynb
src/traffic_accident_impact/: __init__.py  config.py  feature_engineering.py  processing_pandas.py  processing_spark.py  utils.py
src/traffic_accident_impact/modeling/: training-v1.2.py  training-v1.3.py
tests/: conftest.py
tests/traffic_accident_impact/: test_feature_engineering.py  test_processing_spark.py  test_text_preprocessing.py  test_utils.py
traffic_accident_impact/: dataset.py  feature_engineering.py  features.py  plots.py  processing_spark.py  text_preprocessing.py  train.py  utils.py
traffic_accident_impact/modeling/: predict.py  train.py  training-v1.2.py  training-v1.3.py  training-v1.py
(+12 files in other folders)
