[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "traffic_accident_impact"
version = "0.0.1"
description = "This project focuses on predicting the impact of traffic accidents on traffic flow to facilitate improved decision-making and risk assessment."
authors = [
  { name = "zedems" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["traffic_accident_impact"]
force_sort_within_sections = true
