[project]
name = "traffic-accident-impact"
version = "0.1.0"
description = "This project focuses on predicting the impact of traffic accidents on traffic flow to facilitate improved decision-making"
authors = [
    {name = "zedems01", email = "nguessie.achille@gmail.com"},
]
dependencies = ["loguru>=0.7.3", "jupyterlab>=4.3.6", "matplotlib>=3.10.1", "mkdocs>=1.6.1", "notebook>=7.3.3", "numpy>=2.2.4", "pandas>=2.2.3", "pip>=25.0.1", "python-dotenv>=1.0.1", "scikit-learn>=1.6.1", "tqdm>=4.67.1", "typer>=0.15.2", "fastparquet>=2024.11.0", "pyarrow>=19.0.1", "nltk>=3.9.1", "gensim>=4.3.2", "catboost>=1.2.5", "xgboost>=3.0.0", "lightgbm>=4.6.0", "statsmodels>=0.14.4", "openpyxl>=3.1.5", "seaborn>=0.13.2", "pytest>=8.3.5", "pytest-spark>=0.7.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
